[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/Ship.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/World.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Game.gd" type="Script" id=3]
[ext_resource path="res://scripts/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://scenes/Portal.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/countdown.tscn" type="PackedScene" id=7]
[ext_resource path="res://art/white.png" type="Texture" id=8]
[ext_resource path="res://shaders/pixelate.shader" type="Shader" id=9]
[ext_resource path="res://audio/fx/jump.wav" type="AudioStream" id=10]
[ext_resource path="res://audio/fx/die.wav" type="AudioStream" id=11]

[sub_resource type="Animation" id=1]
resource_name = "NextLevel"
tracks/0/type = "value"
tracks/0/path = NodePath("MainCamera:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.25, 0.25 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Ship")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "portal_jump"
}, {
"args": [  ],
"method": "activate"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 900.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MainCamera/Pixelate:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 9 )
shader_param/size_x = 0.01
shader_param/size_y = 0.01

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="StartCountdown" parent="." instance=ExtResource( 7 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/NextLevel = SubResource( 1 )

[node name="World" parent="." instance=ExtResource( 2 )]

[node name="Portal" parent="." instance=ExtResource( 5 )]

[node name="Ship" parent="." instance=ExtResource( 1 )]
position = Vector2( 163, 99 )
rotation = -1.5708

[node name="PortalMarker" type="Position2D" parent="."]

[node name="MainCamera" type="Camera2D" parent="."]
current = true
script = ExtResource( 4 )

[node name="Pixelate" type="TextureRect" parent="MainCamera"]
visible = false
material = SubResource( 3 )
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 8 )
expand = true
stretch_mode = 1

[node name="FX" type="AudioStreamPlayer" parent="."]

[node name="Jump" type="AudioStreamPlayer" parent="FX"]
stream = ExtResource( 10 )

[node name="Die" type="AudioStreamPlayer" parent="FX"]
stream = ExtResource( 11 )

[connection signal="game_over" from="." to="." method="_on_game_over"]
[connection signal="countdown_complete" from="StartCountdown" to="." method="_on_countdown_complete"]
[connection signal="ship_jump" from="Portal" to="." method="_on_ship_jump"]
